--- a/animate2.html
+++ b/animate2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Virtual Dissection Trigger Demo</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Three.js GLB Viewer - Camera Light</title>
+    <style>
+        body { margin: 0; overflow: hidden; background: #222; }
+        canvas { display: block; }
+    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
@@ -14,162 +16,100 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
 
-  <script>
-    let scene, camera, renderer, model, controls;
-    const clock = new THREE.Clock();
-    const raycaster = new THREE.Raycaster();
-    const mouse = new THREE.Vector2();
-    let shapeKeyMesh = null;
-    let shapeKeyIndex = null;
-    let isDissected = false;
+ <div id="three-container" class="w-[500px] h-[300px] border-[20px] border-teel-500">
+</div>
 
-    const requiredAreas = {
-      0: 'Slice_Area_1',
-    };
+<script>
+    // Scene
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0xffffff);
 
-    init();
-    animate();
+    // Container reference
+    const container = document.getElementById('three-container');
 
-    function init() {
-      scene = new THREE.Scene();
-      scene.background = new THREE.Color(0x333333);
+    // Camera
+    let cameraSize = 1;
+    const aspect = container.clientWidth / container.clientHeight;
+    const camera = new THREE.OrthographicCamera(
+        -cameraSize * aspect, cameraSize * aspect,
+        cameraSize, -cameraSize,
+        0.1, 1000
+    );
+    camera.position.set(0, 5, 5);
+    camera.lookAt(0, 0, 0);
 
-      camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 1, 5);
+    // Renderer
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.shadowMap.enabled = false; // No shadows at all
+    renderer.setSize(container.clientWidth, container.clientHeight);
+    container.appendChild(renderer.domElement);
 
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.setPixelRatio(window.devicePixelRatio);
-      document.body.appendChild(renderer.domElement);
+    // Global soft light
+    const hemiLight = new THREE.HemisphereLight(0xffffff, 0xffffff, 1.5);
+    scene.add(hemiLight);
 
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-      controls.target.set(0, 1, 0);
-      controls.update();
+    // Camera-follow light
+    const camLight = new THREE.DirectionalLight(0xffffff, 1);
+    scene.add(camLight);
+    scene.add(camLight.target);
 
-      scene.add(new THREE.AmbientLight(0xffffff, 0.6));
-      const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
-      dirLight.position.set(5, 10, 7);
-      scene.add(dirLight);
-      scene.add(new THREE.HemisphereLight(0xffffbb, 0x080820, 0.5));
+    // GLB Loader
+    const loader = new THREE.GLTFLoader();
+    loader.load(
+        'Tools/nigana_nga_animate2.glb',
+        function (gltf) {
+            const model = gltf.scene;
+            scene.add(model);
 
-      const ground = new THREE.Mesh(
-        new THREE.PlaneGeometry(20, 20),
-        new THREE.MeshStandardMaterial({ color: 0x777777, side: THREE.DoubleSide })
-      );
-      ground.rotation.x = -Math.PI / 2;
-      ground.receiveShadow = true;
-      scene.add(ground);
+            // Center model
+            const box = new THREE.Box3().setFromObject(model);
+            const center = box.getCenter(new THREE.Vector3());
+            const size = box.getSize(new THREE.Vector3());
+            model.position.sub(center);
 
-      const loader = new THREE.GLTFLoader();
-      loader.load(
-        'Tools/ambot.glb',
-        (gltf) => {
-          model = gltf.scene;
-          scene.add(model);
-          console.log("Model loaded successfully:", model);
-
-          model.traverse((child) => {
-            if (child.isMesh) {
-              child.castShadow = true;
-              child.receiveShadow = true;
-              if (child.material) child.material.side = THREE.DoubleSide;
-
-              console.log("Mesh name:", child.name);
-
-              // Detect shape key mesh
-              if (child.morphTargetInfluences) {
-                console.log("✅ This mesh has shape keys!", child.name);
-                shapeKeyMesh = child;
-                // Get the index of the first morph target
-                shapeKeyIndex = Object.values(child.morphTargetDictionary)[0];
-              }
-
-              // Highlight slice areas
-              if (child.name.includes("Slice_Area")) {
-                const edges = new THREE.EdgesGeometry(child.geometry);
-                const line = new THREE.LineSegments(
-                  edges,
-                  new THREE.LineBasicMaterial({ color: 0x00ff00 })
-                );
-                line.position.copy(child.position);
-                line.rotation.copy(child.rotation);
-                line.scale.copy(child.scale);
-                child.add(line);
-              }
-            }
-          });
-
-          const bbox = new THREE.Box3().setFromObject(model);
-          const center = bbox.getCenter(new THREE.Vector3());
-          model.position.sub(center);
-          scene.add(new THREE.AxesHelper(5));
-
-          const size = bbox.getSize(new THREE.Vector3());
-          const maxDim = Math.max(size.x, size.y, size.z);
-          camera.position.z = maxDim * 1.5;
-          controls.target.copy(center);
-          controls.update();
+            // Adjust camera
+            const maxDim = Math.max(size.x, size.z);
+            cameraSize = maxDim / 2;
+            const aspect = container.clientWidth / container.clientHeight;
+            camera.left = -cameraSize * aspect;
+            camera.right = cameraSize * aspect;
+            camera.top = cameraSize;
+            camera.bottom = -cameraSize;
+            camera.position.set(0, size.y * 2, size.z * 2);
+            camera.lookAt(0, 0, 0);
+            camera.updateProjectionMatrix();
         },
         undefined,
-        (error) => {
-          console.error("Error loading model:", error);
-          const fallback = new THREE.Mesh(
-            new THREE.BoxGeometry(1, 1, 1),
-            new THREE.MeshStandardMaterial({ color: 0xff0000 })
-          );
-          scene.add(fallback);
+        function (error) {
+            console.error('Error loading model:', error);
         }
-      );
+    );
 
-      window.addEventListener('mousemove', onMouseMove);
-      window.addEventListener('click', onClick);
-      window.addEventListener('resize', onWindowResize);
-    }
+    // Resize handler
+    window.addEventListener('resize', () => {
+        const aspect = container.clientWidth / container.clientHeight;
+        camera.left = -cameraSize * aspect;
+        camera.right = cameraSize * aspect;
+        camera.top = cameraSize;
+        camera.bottom = -cameraSize;
+        camera.updateProjectionMatrix();
+        renderer.setSize(container.clientWidth, container.clientHeight);
+    });
 
-    function onMouseMove(event) {
-      mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-      mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-    }
-
-    function onClick() {
-      raycaster.setFromCamera(mouse, camera);
-      const intersects = raycaster.intersectObjects(scene.children, true);
-
-      if (intersects.length > 0) {
-        const obj = intersects[0].object;
-        console.log("🔍 Clicked on:", obj.name);
-
-        if (obj.name === requiredAreas[0]) {
-          console.log(`✅ Correct area clicked: ${obj.name}`);
-
-          if (shapeKeyMesh && shapeKeyIndex !== null) {
-            // Toggle animation
-            const targetValue = isDissected ? 0 : 1;
-            gsap.to(shapeKeyMesh.morphTargetInfluences, {
-              [shapeKeyIndex]: targetValue,
-              duration: 1,
-              onComplete: () => {
-                isDissected = !isDissected;
-                console.log(`✅ Toggled shape key to: ${targetValue}`);
-              }
-            });
-          }
-        } else {
-          console.warn("❌ Wrong object clicked:", obj.name);
-        }
-      }
-    }
-
+    // Animation loop
     function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-    }
+        requestAnimationFrame(animate);
 
-    function onWindowResize() {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
+        // Make the light follow the camera
+        camLight.position.copy(camera.position);
+        camLight.target.position.set(0, 0, 0);
+        camLight.target.updateMatrixWorld();
+
+        renderer.render(scene, camera);
     }
-  </script>
+    animate();
+</script>
+
+    
 </body>
 </html>
